--- a/rootdir/init.modem.rc
+++ b/rootdir/init.modem.rc
@@ -11,6 +11,11 @@ on post-fs-data
     # Modem related device nodes
     mkdir /data/nvram/md  0770 root system
 
+#  Build-in Modified - S
+#    insmod /vendor/lib/modules/ccci_plat.ko
+#    insmod /vendor/lib/modules/ccci.ko
+#  Build-in Modified - E
+#   chown radio radio /sys/class/BOOT/BOOT/boot/md
     chown radio radio /sys/kernel/ccci/boot
 
 #SeLinux
@@ -19,28 +24,31 @@ on post-fs-data
     restorecon_recursive /protect_f
     restorecon_recursive /protect_s
     
-service gsm0710muxd /system/bin/gsm0710muxd -s /dev/ttyC0 -f 512 -n 8 -m basic
+    # Encrypt phone function
+    setprop vold.post_fs_data_done 1
+
+service gsm0710muxd /vendor/bin/gsm0710muxd -s /dev/ttyC0 -f 512 -n 8 -m basic
     class core
     user root
     group radio cache inet misc
     disabled
     oneshot
 
-service gsm0710muxdmd2 /system/bin/gsm0710muxdmd2 -s /dev/ccci2_tty0 -f 512 -n 8 -m basic
+service gsm0710muxdmd2 /vendor/bin/gsm0710muxdmd2 -s /dev/ccci2_tty0 -f 512 -n 8 -m basic
     class core
     user root
     group radio cache inet misc
     disabled
     oneshot
-
-service muxreport-daemon /system/bin/muxreport
+    
+service muxreport-daemon /vendor/bin/muxreport
     class core
     user radio
-    group radio cache inet misc 
+    group radio cache inet misc
     disabled
     oneshot
 
-service ril-daemon-mtk /system/bin/mtkrild
+service ril-daemon-mtk /vendor/bin/mtkrild
     class core
     socket rild stream 660 root radio
     socket rild2 stream 660 root radio
@@ -53,12 +61,16 @@ service ril-daemon-mtk /system/bin/mtkrild
     socket rild-mtk-ut-2 stream 660 radio net_bt
     socket rild-mtk-modem stream 660 radio system
     socket rild-atci stream 660 root radio
+    socket sap_uim_socket1 stream 660 bluetooth bluetooth
+    socket sap_uim_socket2 stream 660 bluetooth bluetooth
+    socket sap_uim_socket3 stream 660 bluetooth bluetooth
+    socket sap_uim_socket4 stream 660 bluetooth bluetooth
     user root
     group radio cache inet misc audio sdcard_r sdcard_rw log system
     disabled
     oneshot
 
-service ril-daemon-md2 /system/bin/mtkrildmd2
+service ril-daemon-mtkmd2 /vendor/bin/mtkrildmd2
     class core
     socket rild-md2 stream 660 root radio
     socket rild2-md2 stream 660 root radio
@@ -73,7 +85,7 @@ service ril-daemon-md2 /system/bin/mtkrildmd2
     disabled
     oneshot
 
-service md_minilog_util /system/bin/md_minilog_util
+service md_minilog_util /vendor/bin/md_minilog_util
     user radio
     disabled
     oneshot
@@ -82,36 +94,29 @@ service md_minilog_util /system/bin/md_minilog_util
 #  Modem related services (Begin)
 #
 
-#service permission_check /system/bin/permission_check
-#    class main
-#    user root
-#    group nvram
-#    oneshot
-
-service permission_check /system/bin/permission_check
+service permission_check /vendor/bin/permission_check
     class main
     user root
     group system radio
     oneshot
 
-service ccci_fsd /system/bin/ccci_fsd 0
+service ccci_fsd /vendor/bin/ccci_fsd 0
     user radio
     group radio system
     class core
     oneshot
 
-service ccci_mdinit /system/bin/ccci_mdinit 0
+service ccci_mdinit /vendor/bin/ccci_mdinit 0
     user system
     group radio system
     class core
     oneshot
 
-service ccci_rpcd /system/bin/ccci_rpcd
+service ccci_rpcd /vendor/bin/ccci_rpcd 0
     user radio
     group radio system
     class core
     oneshot
-    disable
 
 service pppd_gprs /system/bin/pppd_dt /dev/ttyACM0 debug noauth refuse-eap usepeerdns nodetach
     user root
@@ -125,9 +130,6 @@ service pppd /system/bin/pppd file /data/misc/ppp/ppp_options
     disabled 
     oneshot
 
-on property:ril.muxreport=1
-    start muxreport-daemon
-
 #
 #
 #  Modem related services (End)
@@ -137,9 +139,12 @@ on property:ril.muxreport=1
 #
 #   Telephony Early Read service
 #
-service terservice /system/bin/terservice
+service terservice /vendor/bin/terservice
     class core
     user radio
     group radio cache inet misc
     oneshot
+
+on property:ril.muxreport=1
+    start muxreport-daemon
 
