--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -16,6 +16,13 @@ on early-init
     # Disable sysrq from keyboard
     write /proc/sys/kernel/sysrq 0
 
+    # Apply strict SELinux checking of PROT_EXEC on mmap/mprotect calls.
+    write /sys/fs/selinux/checkreqprot 0
+
+    # Set the security context for the init process.
+    # This should occur before anything else (e.g. ueventd) is started.
+    setcon u:r:init:s0
+
     # Set the security context of /adb_keys if present.
     restorecon /adb_keys
 
@@ -267,10 +274,6 @@ on post-fs
     #change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
     chown root system /proc/kmsg
     chmod 0440 /proc/kmsg
-    chown root system /proc/sysrq-trigger
-    chmod 0220 /proc/sysrq-trigger
-    chown system log /proc/last_kmsg
-    chmod 0440 /proc/last_kmsg
     
     # make the selinux kernel policy world-readable
     chmod 0444 /sys/fs/selinux/policy
@@ -352,8 +355,8 @@ on post-fs-data
     mkdir /data/property 0700 root root
 
     # create the lost+found directories, so as to enforce our permissions
-    mkdir /data/lost+found 0770 root root
-    mkdir /cache/lost+found 0770 root root
+    mkdir /data/lost+found 0770
+    mkdir /cache/lost+found 0770
 
     mkdir /data/anr 0775 system system
 
