Clean tree from unused files

--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -580,6 +580,7 @@ service ueventd /sbin/ueventd
     class core
     critical
     seclabel u:r:ueventd:s0
+    shutdown critical
     
 service console /system/bin/sh
     class core
