--- a/configs/thermal/thermal.off.conf
+++ b/configs/thermal/thermal.off.conf
@@ -3,90 +3,76 @@
 /qtrg4s slopnhv4s s6cm/vlzzkw%n12
  !"
 /qtrg4s slopnhv4iw"92
- !"
+EYKW$:678) 
+/qtrg4s slopnhv4iw":8
+EYKW$:678) 
 /qtrg4s slopnhv4iw"haecsxn!lg9
 EYKW$7;789 !
+/qtrg4s slopnhv4s s"sbde1x$zz!t
+ !"
 /qtrg4s slopnhv4s s"sqolg2y%  su
  !"
 /qtrg4s slopnhv4s s"sccwxjx%5!yttvx
- !"
-/qtrg4s slopnhv4s s"sqc0w#yy "
- !"
-/qtrg4s slopnhv4s s"sbde1x$zz!t
  !"
 /qtrg4s slopnhv4s s"sxow1x$zz!t
  !"
 /qtrg4s slopnhv4s s6cm/vlzzkw%n13
  !"
-/qtrg4s slopnhv4s s6cm/vlzzkw%n14
+/qtrg4s slopnhv4s s"s2/v"xxz!
  !"
-/qtrg4s slopnhv4s s6cm/eehqsqphu24
+/qtrg4s slopnhv4s s"s3/v"xxz!
  !"
-/qtrg4s slopnhv4s s6cm/eehqsqphu25
+/qtrg4s slopnhv4s s"s4/v"xxz!
  !"
-/qtrg4s slopnhv4s s6cm/eehqsqphu26
- !"
-/qtrg4s slopnhv4s s6cm/nwm  lxwo23
- !"
-/qtrg4s slopnhv4s s6cm/nwm  lxwo24
+/qtrg4s slopnhv4s s"s5/v"xxz!
  !"
 /qtrg4jyq$es1wljxtiu/u!exxewi an
-PVRbV%9@8901"SYUe]WUT!3;45&V^NR`EUMYOJIU_M"76:7789 OVFcYGITN 7"3$%
-/qtrg4jyq$es1wljxtiu/u!exxvhgyascp
-PVRbV%9@8901"SYUe]WUT!3;45&V^NR`EUMYOJIU_M"76:7789 OVFcYGITN 7"4$%
+oghviyy'87012#43678)0/234%&
+/qtrg4jyq$es1wljxtiu/u!exxewi an
+amrkex&86901"42567(:.123$%
+/qtrg4jyq$es1wljxtiu/u!exxewi an
+wfkjlyy'87345#439:;)0/568%&
 /qtrg4jyq$es1wljxtiu/dndxrezm"tjpj
-0!5345&8=)21"84%?78)4123$;67(;112#$
-/qtrg4jyq$es1wljxtiu/dnpyyz
-0!634%778)112#656'990!634%&'(
+0!6345&8=)31"84%7889 7234%9<8)972#$
 /qtrg4jyq$es1wljxtiu/u!ftz
-4!34;567(9 nvnxxiw"6szuuwy&889012#4%s s6cm/vlzzkw%n12#=:678)0!esy58'@>012#4%iw"haecsxn!lg9 1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$:67(:
+5!34;567(9 nvnxxiw"6szuuwy&889012#4%s s6cm/vlzzkw%n12#=:678)0!esy58'A9012#4%iw":8!:8456'8)cqwbeigw!rvfa3$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$7;7(:
+/qtrg4jyq$es1wljxtiu/u!dfg
+1!34;567(9 nvnxxgij6szuuwy&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"4456'
 /qtrg4jyq$es1wljxtiu/u!sqni
 1!379567(9 nvnxxvtql-t vvxz'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#5567(
 /qtrg4jyq$es1wljxtiu/u!eeyzlz'
-1!83456'8)mumwwgg !nrz/v"xxz!)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
-/qtrg4jyq$es1wljxtiu/u!se
-1!354567(9 nvnxxvh5!yttvx%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!3345&
-/qtrg4jyq$es1wljxtiu/u!dfg
-0!34;567(9 nvnxxgij6szuuwy&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$
+1!85456'8)mumwwgg !nrz/v"xxz!)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
 /qtrg4jyq$es1wljxtiu/u!zqy
 1!354567(9 nvnxx"t!6szuuwy&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"4456'
 /qtrg4jyq$es1wljxtiu/u!exx
 1!;8456'8)mum0gq3zp#teqzr57'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#5567(
-/qtrg4jyq$es1wljxtiu/u!9767
-1!354567(9 nvn1hr4 quufr s69(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$6678)
-/qtrg4jyq$es1wljxtiu/u!exxvh
-1!434567(9 nvn1hr4jjclnlkmz79)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
 /qtrg4jyq$es1wljxtiu/u!ww6
-1!434567(9 nvn1hr4jjclnlkmz7:)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
+1!34;567(9 nvnxx74 'ssuw$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  2234%
+/qtrg4jyq$es1wljxtiu/u!ww7
+1!34;567(9 nvnxx84 'ssuw$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  2234%
 /qtrg4jyq$es1wljxtiu/u!ww8
-1!434567(9 nvn1hr4jjclnlkmz7;)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
+1!34;567(9 nvnxx94 'ssuw$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  2234%
 /qtrg4jyq$es1wljxtiu/u!ww9
-1!434567(9 nvn1hr4s!hvvgs!t78)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
-/qtrg4jyq$es1wljxtiu/u!ww:
-1!434567(9 nvn1hr4s!hvvgs!t79)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%6'8)np/fstrlz)0!2#rt3jwxlft#4%6'vx-dqrpjx'8)0!pr1huvtnr!2#4%tv5lopnhv%7789 
+1!34;567(9 nvnxx:4 'ssuw$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  1"3$su4kxomgu$5&7(wo.ersqky(9 1"qs2ivwues"3$5&uw6cpqoiw&7(9 oq0gtusm  2234%
 /qtrg4s s"z0owoyyjx#
 mbaois&8() !"#$%&
+/qtrg4s s"z0owoyyhjk
+mbaois&8() !"#$%&'() 
 /qtrg4s s"z0owoyywurc
 mbaois&;() !"#$%&'() 
 /qtrg4s s"z0owoyyii"tft!
-mbaois&;() !"#$%&'() 
-/qtrg4s s"z0owoyywi
-mbaois&8() !"#$%&'() !"#
+mbaois&;() !"#$%&'() !"#$%&'() !"#
 /qtrg4s s"z0owoyy#u"
 mbaois&;() !"#$%&'() 
 /qtrg4s s"z0owoyyHX
-mbaois&;() !"#$%&'() 
-/qtrg4s s"z0owoyyi"lk
-mbaois&8() !"#$%&'() 
-/qtrg4s s"z0owoyyi!!merd
-mbaois&8() !"#$%&'() 
+mbaois&;() !"#$%&'() !"#$%&'() 
 /qtrg4s s"z0owoyy8
+mbaois&8() !"#$%&'() 
+/qtrg4s s"z0owoyy9
 mbaois&8() !"#$%&'() 
 /qtrg4s s"z0owoyy:
 mbaois&8() !"#$%&'() 
 /qtrg4s s"z0owoyy;
-mbaois&8() !"#$%&'() 
-/qtrg4s s"z0owoyy<
 mbaois&8() !"#$%&'() 
 EPH
 
