--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -608,13 +608,15 @@ service permission_check /vendor/bin/permission_check
     oneshot
 
 service ccci_fsd /vendor/bin/ccci_fsd 0
-    user radio
+    user root
     group radio system
+    class core
     oneshot
 
 service ccci_mdinit /vendor/bin/ccci_mdinit 0
-    user system
+    user root
     group radio system
+    class root
     oneshot
 
 service ccci_rpcd /vendor/bin/ccci_rpcd 0
@@ -625,7 +627,7 @@ service ccci_rpcd /vendor/bin/ccci_rpcd 0
 service nvram_daemon /vendor/bin/nvram_daemon
     class main
     user root
-    group system
+    group root system
     oneshot
 
 service mdlogger /vendor/bin/mdlogger
