--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -9,7 +9,7 @@
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/secro     0640    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/seccfg    0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/proinfo   0660    root    system
-/dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/nvram     0660    root    system
+/dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/nvram     0777    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/para      0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/logo      0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/frp       0660    root    system
@@ -20,7 +20,10 @@
 /dev/wmtdetect            0660   system     system
 
 # BT
-/dev/stpbt                0660   bluetooth  net_bt_stack
+/dev/stpbt                0660   bluetooth  bluetooth
+
+#alarm
+/dev/alarm                0664   system     radio
 
 # GPS
 /dev/stpgps               0660   gps        gps
@@ -30,7 +33,7 @@
 /dev/stpant               0660   system     system
 
 # WIFI
-/dev/wmtWifi              0660   system     system
+/dev/wmtWifi              0660   wifi       wifi
 
 # FMRadio
 /dev/fm                   0660   media     media
@@ -111,3 +114,12 @@
 
 # RPMB
 /dev/block/mmcblk0rpmb    0660   root       system
+
+/dev/random               0666   root       root
+/dev/urandom              0666   root       root
+/dev/erandom              0666   root       root
+/dev/frandom              0666   root       root
+# Make HW RNG readable by group system to let EntropyMixer read it.
+/dev/hw_random            0440   root       system
+/dev/ashmem               0666   root       root
+/dev/binder 0666 root root
