--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -1,15 +1,15 @@
 #change partition permission
-/dev/block/mmcblk0        0660   root       system
-/dev/block/mmcblk0boot0	  0660   root       system
-/dev/block/mmcblk0boot1	  0660   root       system
-/dev/misc-sd              0660   root       system
+/dev/block/mmcblk0                                              0660    root    system
+/dev/block/mmcblk0boot0                                         0660    root    system
+/dev/block/mmcblk0boot1                                         0660    root    system
+/dev/misc-sd                                                    0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/misc2     0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/boot      0640    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/recovery  0640    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/secro     0640    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/seccfg    0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/proinfo   0660    root    system
-/dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/nvram     0777    root    system
+/dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/nvram     0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/para      0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/logo      0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/frp       0660    root    system
@@ -36,7 +36,7 @@
 /dev/wmtWifi              0660   wifi       wifi
 
 # FMRadio
-/dev/fm                   0660   media     media
+/dev/fm                   0660   system     media
 
 # NFC
 /dev/msr3110              0666   root       root
