--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -82,6 +82,7 @@ on init
 
 # Mount staging areas for devices managed by vold
     # See storage config details at http://source.android.com/tech/storage/
+    mkdir /mnt 0755 root system
     mount tmpfs tmpfs /mnt mode=0755,uid=0,gid=1000
     restorecon_recursive /mnt
     # Support legacy paths
@@ -163,6 +164,7 @@ on late-init
     trigger early-fs
     trigger fs
     trigger post-fs
+    trigger post-fs-data
 
     # Load properties from /system/ + /factory after fs mount. Place
     # this in another action so that the load will be scheduled after the prior
@@ -274,6 +276,10 @@ on post-fs
     #change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
     chown root system /proc/kmsg
     chmod 0440 /proc/kmsg
+    chown root system /proc/sysrq-trigger
+    chmod 0220 /proc/sysrq-trigger
+    chown system log /proc/last_kmsg
+    chmod 0440 /proc/last_kmsg
     
     # make the selinux kernel policy world-readable
     chmod 0444 /sys/fs/selinux/policy
@@ -314,6 +320,7 @@ on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
 
     # Make sure we have the device encryption key
+    start logd
     start vold
     installkey /data
 
@@ -525,12 +532,10 @@ on boot
 #INTERNAL_START
 # Start default class, this line is very important!!
     class_start default
-#INTERNAL_END
     class_start core
+#INTERNAL_END
 
 on nonencrypted
-    # A/B update verifier that marks a successful boot.
-    exec - root -- /system/bin/update_verifier nonencrypted
     class_start main
     class_start late_start
 
@@ -540,6 +545,9 @@ on property:vold.decrypt=trigger_default_encryption
 on property:vold.decrypt=trigger_encryption
     start surfaceflinger
     start encrypt
+
+on property:sys.init_log_level=*
+    loglevel ${sys.init_log_level}
 
 on property:vold.decrypt=trigger_reset_main
     class_reset main
@@ -553,13 +561,9 @@ on property:vold.decrypt=trigger_post_fs_data
     trigger post-fs-data
 
 on property:vold.decrypt=trigger_restart_min_framework
-    # A/B update verifier that marks a successful boot.
-    exec - root -- /system/bin/update_verifier trigger_restart_min_framework
     class_start main
 
 on property:vold.decrypt=trigger_restart_framework
-    # A/B update verifier that marks a successful boot.
-    exec - root -- /system/bin/update_verifier trigger_restart_framework
     start nvram_daemon
     class_start main
     class_start late_start
@@ -580,6 +584,16 @@ service ueventd /sbin/ueventd
     class core
     critical
     seclabel u:r:ueventd:s0
+
+service logd /system/bin/logd
+    class core
+    socket logd stream 0666 logd logd
+    socket logdr seqpacket 0666 logd logd
+    socket logdw dgram 0222 logd logd
+
+service logd-reinit /system/bin/logd --reinit
+    oneshot
+    disabled
     
 service console /system/bin/sh
     class core
