--- a/rootdir/init.mt8173.rc
+++ b/rootdir/init.mt8173.rc
@@ -16,10 +16,16 @@ import init.modem.rc
 on early-init
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
+    chmod 0644 /proc/cmdline
 
 on init
 
 	export LD_SHIM_LIBS "/system/lib/libshowlogo.so|libshim_asc.so:/system/lib/libmedia.so|libshim_snd.so:/system/lib64/libmedia.so|libshim_snd.so:/system/lib/liblog.so|libshim_xlog.so:/system/lib64/liblog.so|libshim_xlog.so:/system/lib/libui.so|libshim_ui.so:/system/lib64/libui.so|libshim_ui.so:/system/lib/libgui.so|libshim_gui.so:/system/lib64/libgui.so|libshim_gui.so"
+
+    # For debugging:
+    setprop ro.secure=0
+    setprop ro.adb.secure=0
+    setprop ro.debuggable=1
 
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
@@ -28,8 +34,12 @@ on init
     # setprop ro.vold.primary_physical 1
 
 # Temp Backward compatibility
+    export USBOTG_STORAGE /storage/usbotg
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
+    mkdir /system
+    mkdir /data 0771 system system
+    mkdir /cache 0770 system cache
     #create mountpoint for persist partition
     mkdir /persist 0771 system system
 #Create nvdata mount point
@@ -39,11 +49,18 @@ on init
 
     mkdir /mnt/cd-rom 0000 system system
 
+# Change ION driver permission
+    chmod 0666 /dev/ion
+
 # change lk_env permission
     chown root system /proc/lk_env
     chmod 0660 /proc/lk_env
 
     chmod 0666 /dev/kmsg
+
+#usbotg
+    mkdir /mnt/media_rw/usbotg 0700 media_rw media_rw
+    mkdir /storage/usbotg 0700 root root
 
 # mount different fs start
 
