--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -5,9 +5,7 @@
 #
 import factory_init.connectivity.rc
 import /init.environ.rc
-import init.fon.rc
-import init.trustonic.rc
-import init.aee.rc
+import init.ssd.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
