--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -1,8 +1,8 @@
 #change partition permission
-/dev/block/mmcblk0                                              0660    root    system
-/dev/block/mmcblk0boot0                                         0660    root    system
-/dev/block/mmcblk0boot1                                         0660    root    system
-/dev/misc-sd                                                    0660    root    system
+/dev/block/mmcblk0        0660   root       system
+/dev/block/mmcblk0boot0	  0660   root       system
+/dev/block/mmcblk0boot1	  0660   root       system
+/dev/misc-sd              0660   root       system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/misc2     0660    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/boot      0640    root    system
 /dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/recovery  0640    root    system
@@ -17,10 +17,10 @@
 
 # Connectivity
 /dev/stpwmt               0660   system     system
-/dev/wmtdetect            0660   wifi       wifi
+/dev/wmtdetect            0660   system     system
 
 # BT
-/dev/stpbt                0660   bluetooth  bluetooth
+/dev/stpbt                0660   bluetooth  net_bt_stack
 
 # GPS
 /dev/stpgps               0660   gps        gps
@@ -55,7 +55,6 @@
 
 # Anyone can read the logs, but if they're not in the "logs"
 # group, then they'll only see log entries for their UID.
-/dev/xLog                 0600   root       root
 /dev/log/ksystem          0600   root       log
 
 /dev/ccci*                0660   radio      radio
