--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -35,10 +35,6 @@
 # FMRadio
 /dev/fm                   0660   media     media
 
-# NFC
-/dev/msr3110              0666   root       root
-/dev/mt6605               0660   nfc        radio
-
 # MTK BTIF driver
 /dev/btif                 0600   system     system
 
@@ -111,3 +107,12 @@
 
 # RPMB
 /dev/block/mmcblk0rpmb    0660   root       system
+
+/dev/random               0666   root       root
+/dev/urandom              0666   root       root
+/dev/erandom              0666   root       root
+/dev/frandom              0666   root       root
+# Make HW RNG readable by group system to let EntropyMixer read it.
+/dev/hw_random            0440   root       system
+/dev/ashmem               0666   root       root
+/dev/binder 0666 root root
