--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -7,6 +7,7 @@ import factory_init.connectivity.rc
 import /init.environ.rc
 import init.fon.rc
 import init.trustonic.rc
+import init.aee.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
