--- a/rootdir/init.mt8173.rc
+++ b/rootdir/init.mt8173.rc
@@ -2,10 +2,16 @@
 
 import init.connectivity.rc
 import init.project.rc
+import /FWUpgradeInit.rc
+import init.aee.rc
+import init.fon.rc
+import init.rilproxy.rc
+import init.volte.rc
+import init.mal.rc
+import init.epdg.rc
 import init.trustonic.rc
 import init.common_svc.rc
 import init.mt8173.usb.rc
-import init.ssd.rc
 # add usb .rc here
 
 # init.modem.rc must be the LAST rc file because vold.post_fs_data_done is set in it
