--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -51,6 +51,7 @@
 
 # Anyone can read the logs, but if they're not in the "logs"
 # group, then they'll only see log entries for their UID.
+/dev/xLog                 0600   root       root
 /dev/log/ksystem          0600   root       log
 
 /dev/ccci*                0660   radio      radio
