--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -56,9 +56,8 @@
 
 /dev/ccci*                0660   radio      radio
 /dev/ttyC*                0660   radio      radio
-/sys/kernel/ccci          modem_info   0644   radio       radio
-/sys/kernel/ccci          md1_postfix  0644   radio       radio
-/sys/kernel/ccci          md2_postfix  0644   radio       radio
+/sys/kernel/ccci/debug    0660   radio	    radio
+/sys/kernel/ccci/md_en    0660	 radio	    radio
 /dev/eemcs*               0660   radio      radio
 /dev/emd*                 0660   radio      radio
 /dev/ccci_pcm_rx          0660   audio      audio
