--- a/rootdir/ueventd.mt8173.rc
+++ b/rootdir/ueventd.mt8173.rc
@@ -17,10 +17,10 @@
 
 # Connectivity
 /dev/stpwmt               0660   system     system
-/dev/wmtdetect            0660   system     system
+/dev/wmtdetect            0660   wifi       wifi
 
 # BT
-/dev/stpbt                0660   bluetooth  net_bt_stack
+/dev/stpbt                0660   bluetooth  bluetooth
 
 # GPS
 /dev/stpgps               0660   gps        gps
@@ -30,7 +30,7 @@
 /dev/stpant               0660   system     system
 
 # WIFI
-/dev/wmtWifi              0660   system     system
+/dev/wmtWifi              0660   wifi       wifi
 
 # FMRadio
 /dev/fm                   0660   media     media
@@ -58,13 +58,7 @@
 /dev/ttyC*                0660   radio      radio
 /sys/kernel/ccci/debug    0660   radio	    radio
 /sys/kernel/ccci/md_en    0660	 radio	    radio
-/dev/eemcs*               0660   radio      radio
-/dev/emd*                 0660   radio      radio
-/dev/ccci_pcm_rx          0660   audio      audio
-/dev/ccci_pcm_tx          0660   audio      audio
 /dev/ccci_aud             0660   audio      audio
-/dev/ccci2_aud            0660   audio      audio
-/dev/eemcs_aud            0660   audio      audio
 
 # SGX device node
 /dev/pvrsrvkm             0666   root       root
@@ -81,13 +75,8 @@
 #GPIO
 /dev/mtgpio               0600   radio      root
 
-
-#FOR VIA MODEM
-/dev/ttySDIO*             0660   radio      sdcard_rw
-/dev/ttyRB*               0660   radio      radio
-
 # Mali node
-/dev/mali                 0666   system     graphics
+/dev/mali*                0666   system     graphics
 
 # Change ION driver permission
 /dev/ion                  0666   system     graphics
