--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -280,6 +280,10 @@ on post-fs
     #change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
     chown root system /proc/kmsg
     chmod 0440 /proc/kmsg
+    chown root system /proc/sysrq-trigger
+    chmod 0220 /proc/sysrq-trigger
+    chown system log /proc/last_kmsg
+    chmod 0440 /proc/last_kmsg
     
     # make the selinux kernel policy world-readable
     chmod 0444 /sys/fs/selinux/policy
