factory_init.rc: some fixes adb and mount points

--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -337,6 +337,7 @@ on post-fs-data
 
     # create basic filesystem structure
     mkdir /data/misc 01771 system misc
+    mkdir /data/misc/adb 02750 system shell
     mkdir /data/misc/bluetoothd 0770 bluetooth bluetooth
     mkdir /data/misc/bluetooth 0770 system system
     mkdir /data/misc/keystore 0700 keystore keystore
@@ -365,8 +366,18 @@ on post-fs-data
     mkdir /data/property 0700 root root
 
     # create the lost+found directories, so as to enforce our permissions
-    mkdir /data/lost+found 0770
-    mkdir /cache/lost+found 0770
+    mkdir /data/lost+found 0770 root root
+    mkdir /cache/lost+found 0770 root root
+    mkdir /data/adb 0700 root root
+
+    # Create all remaining /data root dirs so that they are made through init
+    # and get proper encryption policy installed
+    mkdir /data/backup 0700 system system
+    mkdir /data/media 0770 media_rw media_rw
+    mkdir /data/ss 0700 system system
+    mkdir /data/system 0775 system system
+    mkdir /data/system/heapdump 0700 system system
+    mkdir /data/user 0711 system system
 
     mkdir /data/anr 0775 system system
 
